# zero2prod

./: Cargo.toml  Dockerfile  digital_ocean.sh  digital_ocean.txt  spec.yaml  test-output.xml
.github/workflows/: general.yml
.sqlx/: query-974a6d6b6f080d9cf3bee1764fd8f9b23d8f1cea4978411f90d04a266ef9ec1e.json
bruno/Zero2Prod/: Health Check.bru  bruno.json  subscribe.bru
bruno/Zero2Prod/environments/: dev.bru  prod.bru
configuration/: base.yaml
migrations/: 20241203100820_make_status_not_null_in_subscriptions.sql  20241214094641_seed_user.sql  20241221113022_create_newsletters_issue.sql  20241221192322_create_issue_delivery_queue_table.sql  20241221214847_add_n_retries_to_issue_delivery_queue.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middlewear.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: dashboard.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
