[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { git = "https://github.com/mehcode/config-rs.git" }
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
