[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { git = "https://github.com/mehcode/config-rs.git" }
once_cell = "1"
reqwest = "0.12.4"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1", features = ["v4"] }
