[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web = "4.6.0"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
claims = "0.7"
config = { git = "https://github.com/mehcode/config-rs.git" }
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dev-dependencies]
fake = "2.9.2"
linkify = "0.9"
once_cell = "1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1"
wiremock = "0.5"
